# ros2_bmi323_driver

./: CMakeLists.txt  README.md  bmi3.c  bmi3.h  bmi323.c  bmi323.h  bmi323_defs.h  bmi330.c  bmi330.h  bmi330_defs.h  package.xml
bmi323_examples/accel/: Makefile  accel.c
bmi323_examples/accel_foc/: Makefile  accel_foc.c
bmi323_examples/accel_gyro_temp/: Makefile
bmi323_examples/alternate_config_any_no_motion/: Makefile  alternate_config_any_no_motion.c
bmi323_examples/alternate_config_flat_sig_motion/: Makefile  alternate_config_flat_sig_motion.c
bmi323_examples/alternate_config_step_counter_tap/: Makefile  alternate_config_step_counter_tap.c
bmi323_examples/alternate_config_tilt_orient/: Makefile  alternate_config_tilt_orient.c
bmi323_examples/any_motion/: any_motion.c
bmi323_examples/any_no_motion_enable_disable/: Makefile
bmi323_examples/axis_remap/: Makefile  axis_remap.c
bmi323_examples/common/: common.c
bmi323_examples/context_selection_any_motion/: Makefile  context_selection_any_motion.c
bmi323_examples/context_selection_no_motion/: context_selection_no_motion.c
bmi323_examples/context_selection_orientation/: context_selection_orientation.c
bmi323_examples/context_selection_sig_motion/: Makefile  context_selection_sig_motion.c
bmi323_examples/context_selection_step_counter/: Makefile  context_selection_step_counter.c
bmi323_examples/context_selection_tap/: context_selection_tap.c
bmi323_examples/fifo_full_int/: fifo_full_int.c
bmi323_examples/tap/: tap.c
include/: bmi323driver.h
lib/: CMakeLists.txt
src/: bmi323_node.cpp
(+148 files in other folders)
